# scantailor-universal

./: CMakeLists.txt
cmake/: FindEXIV2.cmake  generate_nsi_file.cmake.in
src/app/: NewOpenProjectPanel.cpp
src/app/ui/: ExportDialog.ui  FixDpiDialog.ui  ProjectFilesDialog.ui  SettingsDialog.ui
src/core/filters/output/: BlackWhiteOptions.cpp  BlackWhiteOptions.h  OptionsWidget.cpp  OutputGenerator.cpp
src/core/filters/output/ui/: OutputOptionsWidget.ui
src/imageproc/: Binarize.cpp  Binarize.h  CMakeLists.txt
src/packaging/windows/: CMakeLists.txt
src/stylesheets/: Breeze.qss  BreezeDark.qss  dark_blue.qss
src/translations/: scantailor-universal_ru.ts
